--- a/views/global/outerLayout.html
+++ b/views/global/outerLayout.html
@@ -20,8 +20,9 @@
           {# edit === can edit THIS page #}
           {{ aposPeopleMenu(permissions) }}
           {{ aposGroupsMenu(permissions) }}
-          {{ aposMediaMenu({ edit: permissions.guest })}}
-          {{ aposTagsMenu({ edit: permissions.admin }) }}
+          {{ aposMediaMenu(permissions) }}
+          {{ aposTagsMenu(permissions) }}
+		  {{ aposSnippetMenu(permissions) }}
 
           {% if edit %}
             <div class="apos-admin-bar-item apos-preview-toggle">
