Updates to app.js

--- a/views/pages/default.html
+++ b/views/pages/default.html
@@ -21,7 +21,7 @@
         {% endfor %}
       </ul>
       {{ aposArea(page, 'pageheader', {
-        textOnly: true,
+        textOnly: false,
         styles: [
           { value: 'h3', label: 'Title'    },
           { value: 'h4', label: 'Subtitle' }
